--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:      
   app:
     build:
@@ -9,4 +7,4 @@ services:
       - .:/app
     ports:
       - 8000:8000
-    # command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
