--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,14 @@
 services:      
+
+  ddbb:
+    image: mysql:8
+    volumes:
+      - ./ddbb:/var/lib/mysql
+    ports:
+      - 3306:3306
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=1
+      
   app:
     build:
       context: .
@@ -7,4 +17,10 @@ services:
       - .:/app
     ports:
       - 8000:8000
+    env_file:
+      - .env
+    depends_on:
+      - ddbb      
+    links:
+      - ddbb:mysql
     command: python manage.py runserver 0.0.0.0:8000
